--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,30 @@
 .table{
     width: 100%;
-    margin-bottom: 1.5em;
+    height: 300px;
+    border-color: var(--border-color);
+    background-color: white;
+    white-space: nowrap;
+    overflow: scroll;
+    border-top: 2px solid var(--light-gray);
+}
+.card{
     border-spacing: 0;
     border: 1px solid;
-    border-color: #ddd;
+    border-color: var(--border-color);
     background-color: white;
-    border-radius: 5px;
+    border-radius: 5px;    
+}
+table{
+    width: 100%;
+}
+#table-header{
+    font-size: 20px; 
+}
+.subheading-left{
+    text-align: left;
+    padding-left: 5px;
+}
+.subheading-right{
+    text-align: right;
+    padding-right: 5px;
 }
