drop down animation added and css tags fixed

--- a/src/css/CustomerInfo.css
+++ b/src/css/CustomerInfo.css
@@ -1,5 +1,9 @@
 .customer-info{
     font-family: Karla, Helvetica, Arial, sans-serif;
+    transform: translateY(1em);
+    z-index: -1;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+    margin-top: 0px;
 }
 
 .customerInfo-image{
@@ -33,5 +37,5 @@
     outline: none;
     margin:0 auto;
     display:block;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
