--- a/src/css/EmailTable.css
+++ b/src/css/EmailTable.css
@@ -8,7 +8,7 @@
     border-top: 1px solid var(--light-gray);
     border-bottom: 1px solid var(--light-gray);
 }
-#emailTable-table-header{
+.emailTable-table-header{
     font-size: 20px; 
     font-family: Karla, Helvetica, Arial, sans-serif;
 }
