--- a/src/ErrorBoundary/errorBoundary.css
+++ b/src/ErrorBoundary/errorBoundary.css
@@ -1,5 +1,10 @@
-.error-boundary{
+.errorBoundary{
     font-family: Karla, Helvetica, Arial, sans-serif;
     text-align: center;
     padding-top: 20px;
+}
+.errorBoundary-info, .errorBoundary-error{
+    margin-right: 10px;
+    margin-left: 10px;
+    font-size: 16px
 }
